--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "debug": "^4.3.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "inquirer": "^8.2.0",
     "mongoose": "^6.2.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
